Break up into seperate types and concat them all

--- a/templates/demo.html
+++ b/templates/demo.html
@@ -20,6 +20,24 @@
 <div class="shadow p-3 mb-5 bg-white rounded">Regular shadow</div>
 <div class="shadow-lg p-3 mb-5 bg-white rounded">Larger shadow</div>
 
+<div class="accordion" id="${1:accordionExample}">
+  <div class="card">
+    <div class="card-header" id="headingOne">
+      <h2 class="mb-0">
+        <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#${2:collapseOne}" aria-expanded="true" aria-controls="${2:collapseOne}">
+          Collapsible Group Item #1
+        </button>
+      </h2>
+    </div>
+
+    <div id="${2:collapseOne}" class="collapse show" aria-labelledby="headingOne" data-parent="#${1:accordionExample}">
+      <div class="card-body">
+        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+      </div>
+    </div>
+  </div>
+</div>
+
 
 </body>
 </html>
