--- a/templates/demo.html
+++ b/templates/demo.html
@@ -347,12 +347,12 @@
                 <div class="row shadow  bg-light p-3 m-3 ">
                 Paper Content
                 </div>
-                <div class="container ">
+                <div class="container   px-1 gy-1">
                 <div class="row row-cols-2">
-                  <div class="col  shadow  bg-light py-3">
+                  <div class="col  shadow  bg-light px-">
                     b5
                   </div>
-                    <div class="col  shadow  bg-light py-3">
+                    <div class="col  shadow  bg-light px-">
                       b5
                     </div>
                 </div>
