--- a/templates/demo.html
+++ b/templates/demo.html
@@ -10,7 +10,7 @@
     <title>Blog Template · Bootstrap</title>
 
     <link rel="canonical" href="https://v5.getbootstrap.com/docs/5.0/examples/blog/">
-    
+
 
 
     <!-- Bootstrap core CSS -->
@@ -352,7 +352,7 @@
                   <div class="col  shadow  bg-light px-">
                     b5
                   </div>
-                    <div class="col  shadow  bg-light px-">
+                    <div class="col  shadow  bg-light ">
                       b5
                     </div>
                 </div>
